<resources>
    <string name="app_name">智慧校园</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="login">登录</string>
    <string name="login_account_hint">请输入您的账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="server_address">服务器地址</string>
    <string name="text_personal_center">个人中心</string>
    <string name="text_user_photo">头像</string>
    <string name="text_user_name">用户名</string>
    <string name="text_user_real_name">姓名</string>
    <string name="text_user_sex">性别</string>
    <string name="text_user_work_number">工号</string>
    <string name="text_user_phone_number">手机</string>
    <string name="text_check_update">检查更新</string>
    <string name="text_clear_cache">清除缓存</string>
    <string name="text_user_logout">退出登录</string>
    <string name="text_choose_from_phone">从手机选择</string>
    <string name="text_take_a_photo">拍照</string>
    <string name="text_cancel">取消</string>
    <string name="text_please_setting_authority">请到设置开启应用权限</string>
    <string name="text_update_user_info_fail">未能从服务器获取到用户信息更新</string>
    <string name="text_save_photo_failed"> 无法保存上传的头像，请检查内存卡是否挂载</string>
    <string name="text_update_photo_success">更换头像成功</string>
    <string name="text_update_photo_failed">更换头像失败</string>
    <string name="text_update_photo_success2">更新图片成功</string>
    <string name="text_update_photo_failed2">更新图片失败</string>
    <string name="text_registered_record_title">已登记课堂日志</string>
    <string name="text_class_log">课堂日志</string>
    <string name="text_class_log_register">登记</string>
    <string name="date_to">至</string>
    <string name="total_class_hour">共 0 课时</string>
    <string name="not_record_now">暂无记录</string>
    <string name="text_class_time">上课时间：</string>
    <string name="text_class_name">上课班级：</string>
    <string name="text_attendance_state">出勤情况：</string>
    <string name="text_course_score1">得分：</string>
    <string name="text_class_section">上课节次：</string>
    <string name="text_show_course_name">课程名称：</string>
    <string name="text_status">状态：</string>
    <string name="text_have_been_approve">已审核</string>
    <string name="text_no_approve">未审核</string>
    <string name="text_late_person">迟到：</string>
    <string name="text_leave_person">请假：</string>
    <string name="text_absenteeism_person">旷课：</string>
    <string name="text_public_holidays">公假：</string>
    <string name="text_course_teacher">授课教师：</string>
    <string name="text_course_name">课程名称</string>
    <string name="text_apartment">部门</string>
    <string name="text_class_headmaster">班主任</string>
    <string name="text_class_teacher">授课教师</string>
    <string name="text_class_total_person">班级人数</string>
    <string name="text_class_actual_come_person">实到人数</string>
    <string name="text_class_late_person">迟到人数</string>
    <string name="text_class_leave_person">请假人数</string>
    <string name="text_class_absenteeism_person">旷课人数</string>
    <string name="text_class_public_holidays">公假人数</string>
    <string name="text_remark1">备注：</string>
    <string name="text_course_score2">得分</string>
    <string name="text_remark2">备注</string>
    <string name="text_modify">修改</string>
    <string name="text_delete">删除</string>
    <string name="text_sure">确定</string>
    <string name="text_sure_delete_ask">确定删除该条日志登记信息吗？</string>
    <string name="text_delete_success">删除成功</string>
    <string name="text_delete_failed">删除失败</string>
    <string name="unregister_string">未登记</string>
    <string name="has_register_string">已登记</string>
    <string name="text_not_result">查询无结果</string>
    <string name="text_not_more_result">无更多结果</string>
    <string name="text_not_result_select_date">该日期下无查询结果</string>
    <string name="text_get_class_list_failed">获取我的班级列表失败</string>
    <string name="text_get_approve_failed">获取领导审核日失败,无法进行下一步操作</string>
    <string name="text_can_not_modify">该条记录已审核，无法进行修改操作</string>
    <string name="text_can_not_delete">该条记录已审核，无法进行删除操作</string>
    <string name="search_date_error_begin">查询开始日期不能大于结束日期,请重新进行选择</string>
    <string name="search_date_error_end">查询结束日期不能小于开始日期,请重新进行选择</string>
    <string name="text_not_match_class_info">无匹配的班级信息！</string>
    <string name="text_you_are_not_headmaster">您已不是该班级的班主任/该班级不存在</string>
    <string name="unusual_state">异常</string>
    <string name="please_choose_section">请选择上课节次</string>
    <string name="today">今天</string>
    <string name="next_step">下一步</string>
    <string name="already_clean">已清除</string>
    <string name="not_register_date">暂无可登记的日期</string>
    <string name="not_register_section">暂无可登记的节次</string>
    <string name="add_class">添加班级</string>
    <string name="add_session">添加节次</string>
    <string name="modify_section">修改节次</string>
    <string name="add_course">添加课程</string>
    <string name="add_teacher">添加教师</string>
    <string name="my_class">我的班级</string>
    <string name="set_server_address">设置服务器</string>
    <string name="hide_server_address">隐藏地址栏</string>
    <string name="section_choose">上课节次</string>
    <string name="finish">完成</string>
    <string name="no_unsign_section">没有未登记的节次</string>
    <string name="course_daily">课堂日志</string>
    <string name="has_signed">已登记</string>
    <string name="server_address_error">服务器地址错误</string>
    <string name="requst_time_out">请求超时，请检查网络状况或服务器地址</string>
    <string name="account_or_password_wrong">登录账号、密码错误或账号已过期</string>
    <string name="course_score">课堂得分</string>
    <string name="sign_confirm">签名确认</string>
    <string name="no_data">暂无记录</string>
    <string name="password_error">登录账号或密码错误</string>
    <string name="text_same_with_previous_status">和上节相同</string>
    <string name="text_student_list">学生名单</string>
    <string name="text_search_student">搜索</string>
    <string name="text_please_key_word_search">请输入姓名或工号进行搜索</string>
    <string name="text_search_in_all_course">在课程库中搜索</string>
    <string name="text_get_teacher_list_failed">获取失败</string>
    <string name="text_add_same_teacher_item">您已添加过该教师</string>
    <string name="text_add_same_course_item">您已添加过该课程</string>
    <string name="text_get_my_course_failed">获取您所教的课程失败</string>
    <string name="text_have_been_select_course">已选择的课程</string>
    <string name="text_have_been_select_teacher">已选择的教师</string>
    <string name="text_add_custom_course_failed">添加自定义课程失败</string>
    <string name="text_search_failed">搜索失败,请检查网络</string>
    <string name="text_search_not_match_course">无匹配的课程</string>
    <string name="text_now_not_have_select_teacher">当前没有已选择的老师</string>
    <string name="text_now_not_have_select_course">当前没有已选择的课程</string>
    <string name="text_search_not_match_teacher">无匹配的教师</string>
    <string name="text_sure_update_course_info">更新课表</string>
    <string name="text_update_course">更新</string>
    <string name="text_now_course_info">当前：</string>
    <string name="text_course_info_update">课表：</string>
    <string name="text_course_show">课程：</string>
    <string name="text_teacher_show">教师：</string>
    <string name="text_course_show2">课程？</string>
    <string name="text_teacher_show2">教师？</string>
    <string name="text_student_info">学生信息</string>
    <string name="text_student_name">姓名：</string>
    <string name="text_student_sex">姓别：</string>
    <string name="text_student_no">学号：</string>
    <string name="text_select_course_can_not_above_ten">最多选择10门课程</string>
    <string name="text_select_teacher_can_not_above_ten">最多选择10名教师</string>
    <string name="text_can_not_deal_with_approve_data">不能对历史数据进行操作</string>
    <string name="text_contain_all_have_been_sign_section">当前选择的所有节次均已被登记，请重新选择节次。</string>
    <string name="text_contain_have_been_sign_section_went_submit">提交登记的节次中包含已被登记的节次,提交失败</string>
    <string name="text_same_with_pre_can_not_change">您已选择和上节数据相同，若想改变数据请先关闭此开关</string>
    <string name="text_contain_signed_section_is_need_delete">选择的节次中包含已被登记的节次，是否需要删除已登记的节次？</string>
    <string name="text_sure_delete_all">确定清除所有已选择的</string>
    <string name="text_modify_section_have_been_sign">当前日期下所选择的节次已经被登记，请重新选择</string>
    <string name="text_asset_management">资产管理</string>
    <string name="url_asset_management">/Mobile</string>
    <string name="text_applying_a_post">发起申请</string>
    <string name="url_applying_a_post">/Mobile/AssetApplyMobile/Index</string>
    <string name="text_deal_with_post">处理审批</string>
    <string name="url_deal_with_post">/Mobile/HandleApprovalFlow/Index</string>
    <string name="text_search_asset">查看资产</string>
    <string name="url_search_asset">https://www.baidu.com</string>
    <string name="text_distribute_asset">分配资产</string>
    <string name="url_distribute_asset">/Mobile/AssetAllocationMobile/Put</string>
    <string name="text_shift_asset">资产转移</string>
    <string name="url_shift_asset">/Mobile/AddAssetShiftMobile/Index</string>
    <string name="text_repair_asset">资产维修</string>
    <string name="url_repair_asset">/Mobile/AddAssetModifyMobile/Index</string>
    <string name="text_scrap_asset">资产报废</string>
    <string name="url_scrap_asset">/Mobile/AddAssetBreakMobile/Index</string>
    <string name="text_maintain_asset">维修资产</string>
    <string name="url_maintain_asset">/Mobile/AssetRepair/Index</string>
    <string name="text_check_asset">盘点资产</string>
    <string name="url_check_asset">/Mobile/AssetCheckMobile/Index</string>
    <string name="find_text">资产遗失</string>
    <string name="no_match_text">数量不符</string>
    <string name="no_clear_text">存放地点错误</string>
    <string name="find_text2">实物与二维码不符</string>
    <string name="no_match_text2">二维码模糊无法识别</string>
    <string name="crrent_record">"      当前备注信息：</string>
    <string name="asset_card_details">/Mobile/Asset/AssetCard?assetId=</string>
    <string name="no_network">无法连接服务器\n请检查网络设置</string>
    <string name="scanning_asset_code">请扫描资产二维码</string>
    <string name="asset_title">扫描二维码</string>
    <string name="scanning_true_code">请扫描正确的二维码</string>
    <string name="flag_add_remarks">点此添加备注：</string>
    <string name="flag_change_remarks">点此修改备注：</string>
    <string name="cant_open_flashlight">无法开启闪光灯</string>
    <string name="approval_history">审批历史</string>
    <string name="no_teachers">无可复用分数的老师</string>
    <string name="main_tab_home">首页</string>
    <string name="error_dialog_msg">      输入的分数有误 , 请重新输入</string>
    <string name="input_score_error">      输入的分数超过总分 , 请重新输入</string>
    <string name="error_title_score">总分不能为负数</string>
    <string name="main_tab_add">新增</string>
    <string name="main_tab_my">我的</string>
    <string name="class_patrol">课堂巡视</string>
    <string name="string_class_null">无匹配的班级信息</string>
    <string name="class_patrol_history">巡课记录</string>
    <string name="plan_protal">按计划巡课</string>
    <string name="random_protal">随机巡课</string>
    <string name="addClass">添加班级</string>
    <string name="action_settings">Settings</string>
    <string name="history">已登记巡课记录</string>
    <string name="patrol_register">巡课登记</string>
    <string name="dock_score_edit">编辑得分</string>
    <string name="patrol_class_auto_score">自动计算得分</string>
    <string name="patrol_class_no_auto_score">非自动计算得分</string>
    <string name="patrol_class_date_error">您选择的日期还未上课,请重新选择</string>
    <string name="patrol_search_teacher">教师搜索</string>
    <string name="patrol_search_class">班级搜索</string>
    <string name="lfrecyclerview_header_hint_normal">下拉刷新</string>
    <string name="lfrecyclerview_header_hint_ready">松开刷新数据</string>
    <string name="lfrecyclerview_header_hint_loading">正在加载...</string>
    <string name="confirm">确认</string>
    <string name="validate_seal_pwd">验证签章密码</string>
    <string name="hint_pwd_error">密码错误</string>
    <string name="string_section">节次</string>
    <string name="string_course_name">课程名称</string>
    <string name="string_teacher_name">教师名称</string>
    <string name="string_score">得分</string>
    <string name="previous_section">上一节</string>
    <string name="next_section">下一节</string>
    <string name="save_score">保存</string>
</resources>