<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="28dp">
        <TextView
            android:gravity="center"
            android:id="@+id/tv_class_attendance_status_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/text_attendance_state"
            android:textColor="@color/word_color_666666"
            android:textSize="@dimen/size40"/>
        <TextView
            android:gravity="center"
            android:id="@+id/tv_attendance_status_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_class_attendance_status_name"
            android:text="0/0"
            android:textColor="@color/main_color"
            android:textSize="@dimen/size40"/>
        <com.kyleduo.switchbutton.SwitchButton
            android:gravity="center"
            android:id="@+id/sb_same_with_previous_status_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/SwitchButtonStyle"
            android:checked="false"
            app:kswTintColor="@color/main_color"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_same_with_previous_show"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/sb_same_with_previous_status_sign"
            android:text="@string/text_same_with_previous_status"
            android:textColor="@color/word_color_666666"
            android:textSize="@dimen/size40"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_late_person"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
            <TextView
                android:id="@+id/tv_late_person_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_absenteeism_person"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
            <TextView
                android:id="@+id/tv_truant_person_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_leave_person"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
            <TextView
                android:id="@+id/tv_leave_person_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_public_holidays"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
            <TextView
                android:id="@+id/tv_holiday_person_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/word_color_999999"
                android:textSize="@dimen/size40"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divide_line"/>

    <RelativeLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:id="@+id/layout_score_input"
        android:layout_width="match_parent"
        android:layout_height="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_course_score1"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/size40"/>

        <EditText
            android:id="@+id/et_score_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_text_view_enable_bg"
            android:gravity="right"
            android:textColorHint="@color/gray_dcdcdc"
            android:hint="请输入得分"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true"
            android:textSize="@dimen/size40"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/layout_remark_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remark1"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/size40"/>
        <!--行数和字数代码中设置才能生效-->
        <com.gta.zssx.pub.widget.DisableEmojiEditText
            android:layout_toRightOf="@+id/textview"
            android:id="@+id/et_remark_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:hint="请输入备注"
            android:gravity="right"
            android:textColorHint="@color/gray_dcdcdc"
            android:textSize="@dimen/size40"/>

    </RelativeLayout>
    <View
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divide_line"/>
    <LinearLayout
        android:background="@color/gray_slight"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:text="@string/text_student_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/word_color_444444"
            android:textSize="@dimen/size40"/>
        <TextView
            android:id="@+id/tv_search_student"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/text_search_student"
            android:textColor="@color/word_color_444444"
            android:textSize="@dimen/size40"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/search_search"
            android:layout_gravity="right"/>
    </LinearLayout>

</LinearLayout>