<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/pop_layout"
              android:background="@color/popup_window_color">
              <!--android:background="@color/transparent"-->

       <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"/>-->

        <TextView
            android:background="@drawable/text_item_bg"
            android:id="@+id/tv_modify"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_modify"
            android:gravity="center"
            android:textColor="@color/main_color"
            android:textSize="@dimen/one_level_word"/>

        <TextView
            android:background="@drawable/text_item_bg"
            android:id="@+id/tv_delete"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_delete"
            android:gravity="center"
            android:textColor="@color/delete_color"
            android:textSize="@dimen/one_level_word"/>

        <TextView
            android:background="@drawable/text_item_bg"
            android:id="@+id/tv_cancel_show"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:gravity="center"
            android:textColor="@color/word_color_999999"
            android:textSize="@dimen/one_level_word"/>

</LinearLayout>